--- a/public/locales/chi/translation.json
+++ b/public/locales/chi/translation.json
@@ -1,4 +1,6 @@
 {
-    "invalid email":"无效的 电子邮件",
-    "length is less than five":"长度 是 较少的 比 五"
+    "not valid":"无效",
+    "required":"必需的",
+    "minimum 6 characters":"最少 6 个字符",
+    "30 character max":"最多 30 个字符"
 }
