--- a/public/locales/chi/translation.json
+++ b/public/locales/chi/translation.json
@@ -1,6 +1,6 @@
 {
-    "not valid":"无效",
+    "invalid email":"不合規電郵",
     "required":"必需的",
-    "minimum 6 characters":"最少 6 个字符",
-    "30 character max":"最多 30 个字符"
+    "password must be at least 6 characters":"密碼必須至少6個字符",
+    "password must be at most 12 characters": "密碼不得超過 12 個字符"
 }
